ferritin/src/snapshots/ferretin__tests__get_crate_root_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate\"), OutputMode::Tty)"
---
[38;2;192;197;206m  [0m[38;2;192;197;206mItem: test_crate[0m
[38;2;192;197;206mKind: Module[0m
[38;2;192;197;206mVisibility: Public[0m
[38;2;192;197;206mDefined at: [0m[38;2;192;197;206mtest_crate[0m
[38;2;192;197;206mIn crate: [0m[38;2;192;197;206mtest-crate[0m[38;2;192;197;206m ([0m[38;2;192;197;206m0.1.0[0m[38;2;192;197;206m)[0m


[38;2;192;197;206mA minimal test crate for rustdoc JSON testing[0m



[38;2;192;197;206;1mModules[0m
  • [38;2;192;197;206;1mlink_resolution_tests[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mreexport_mod[0m
  • [38;2;192;197;206;1msubmodule[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mStructs[0m
  • [38;2;192;197;206;1mGenericStruct[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mSubStruct[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mTestStruct[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mTupleStruct[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mUnitStruct[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mVec[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mEnums[0m
  • [38;2;192;197;206;1mGenericEnum[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mTestEnum[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mTraits[0m
  • [38;2;192;197;206;1mComplexTrait[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mTestTrait[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mFunctions[0m
  • [38;2;192;197;206;1masync_function[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mgeneric_function[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1msub_function[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mtest_function[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mConstants[0m
  • [38;2;192;197;206;1mTEST_CONSTANT[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mStatics[0m
  • [38;2;192;197;206;1mTEST_STATIC[0m[38;2;192;197;206m
[0m
[38;2;192;197;206;1mVariants[0m
  • [38;2;192;197;206;1mVariantA[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mVariantB[0m[38;2;192;197;206m
[0m
  • [38;2;192;197;206;1mVariantC[0m[38;2;192;197;206m
[0m
