ferritin/src/snapshots/ferretin__tests__get_generic_enum.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::GenericEnum\"), OutputMode::TestMode)"
---
  Item: GenericEnum
Kind: Enum
Visibility: Public
Defined at: <type-name>test_crate</type-name><punctuation>::</punctuation><type-name>GenericEnum</type-name>
In crate: test-crate (0.1.0)

<truncated level="full">A generic enum for testing

See also <link href="https://docs.rs/test-crate/0.1.0/test-crate/submodule/enum.TestEnum.html"><inline-code>crate::TestEnum</inline-code></link>

</truncated>

<keyword>enum</keyword> <type-name>GenericEnum</type-name><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <generic>U</generic> <operator>=</operator> <type-name>String</type-name><punctuation>></punctuation>
<keyword>where</keyword>
    <generic>T</generic><punctuation>:</punctuation> <type-name>Clone</type-name> + <type-name>Send</type-name><punctuation>,</punctuation>
    <generic>U</generic><punctuation>:</punctuation> <type-name>std::fmt::Display</type-name> <punctuation>{</punctuation>
    <type-name>Simple</type-name><punctuation>,</punctuation>
    <type-name>WithData</type-name><punctuation>(</punctuation><generic>T</generic><punctuation>)</punctuation><punctuation>,</punctuation>
    <type-name>Mixed</type-name> <punctuation>{</punctuation>
        <field-name>data</field-name><punctuation>:</punctuation> <generic>T</generic><punctuation>,</punctuation>
        <field-name>info</field-name><punctuation>:</punctuation> <generic>U</generic><punctuation>,</punctuation>
    <punctuation>}</punctuation><punctuation>,</punctuation>
<punctuation>}</punctuation>

<section><section-title>Variants:</section-title><list>
  <item><type-name>Simple</type-name>
<truncated level="single-line">Simple variant

</truncated>
</item>
  <item><type-name>WithData</type-name>
<truncated level="single-line">Variant with generic data

</truncated>
</item>
  <item><type-name>Mixed</type-name>
<truncated level="single-line">Variant with mixed generics

</truncated>
</item>
</list>
</section>
std traits: Any Borrow BorrowMut Freeze From Into RefUnwindSafe Send Sync TryFrom TryInto Unpin UnwindSafe
