ferritin/src/snapshots/ferretin__tests__get_submodule.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::submodule\"), OutputMode::TestMode)"
---
  Item: submodule
Kind: Module
Visibility: Public
Defined at: <type-name>test_crate</type-name><punctuation>::</punctuation><type-name>submodule</type-name>
In crate: test-crate (0.1.0)

<truncated level="full">A module with items

</truncated>

<section><section-title>Structs</section-title><list>
  <item><label><type-name>SubStruct</type-name></label>
<truncated level="single-line">A struct in a submodule

</truncated>
</item>
</list>
</section><section><section-title>Enums</section-title><list>
  <item><label><type-name>TestEnum</type-name></label>
<truncated level="single-line">An enum for testing

This is like <link href="https://docs.rs/test-crate/0.1.0/test-crate/enum.GenericEnum.html"><inline-code>crate::GenericEnum</inline-code></link> but without the generic

</truncated>
</item>
</list>
</section><section><section-title>Functions</section-title><list>
  <item><label><type-name>sub_function</type-name></label>
<truncated level="single-line">A function in a submodule

</truncated>
</item>
</list>
</section><section><section-title>Variants</section-title><list>
  <item><label><type-name>VariantA</type-name></label>
<truncated level="single-line">Variant A (see also <link href="https://docs.rs/test-crate/0.1.0/test-crate/enum.GenericEnum.html"><inline-code>crate::GenericEnum</inline-code></link>)

</truncated>
</item>
  <item><label><type-name>VariantB</type-name></label>
<truncated level="single-line">Variant B with data

</truncated>
</item>
  <item><label><type-name>VariantC</type-name></label>
<truncated level="single-line">Variant C with struct data (<inline-code>name</inline-code> and <inline-code>value</inline-code>)

</truncated>
</item>
</list>
</section>
