ferritin/src/snapshots/ferretin__tests__list_crates.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::list(), OutputMode::TestMode)"
---
<title>Available crates:</title>

<list>
  <item><label>alloc</label> 1.95.0-nightly 
    The Rust core allocation and collections library</item>
  <item><label>core</label> 1.95.0-nightly 
    The Rust Core Library</item>
  <item><label>std</label> 1.95.0-nightly 
    The Rust Standard Library</item>
  <item><label>proc_macro</label> 1.95.0-nightly 
    A support library for macro authors when defining new macros</item>
  <item><label>test</label> 1.95.0-nightly 
    Support code for rustc's built in unit-test and micro-benchmarking framework</item>
</list>
