ferritin/src/snapshots/ferretin__tests__search.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::search(\"trigger line-based truncation\"),\nOutputMode::TestMode)"
---
<title>Search results for 'trigger line-based truncation'</title>

<list>
  <item><label>core::line</label> (Macro) - score: 0
    Expands to the line number on which it was invoked.</item>
  <item><label>std::line</label> (Macro) - score: 0
    Expands to the line number on which it was invoked.</item>
  <item><label>std::io</label> (Module) - score: 0
    Traits, helpers, and type definitions for core I/O functionality.</item>
  <item><label>std::io::BufRead</label> (Trait) - score: 0
    A `BufRead` is a type of `Read`er which has an internal buffer, allowing it
    to perform extra ways of reading.</item>
  <item><label>std::io::LineWriter</label> (Struct) - score: 0
    Wraps a writer and buffers output to it, flushing whenever a newline
    (`0x0a`, `'\n'`) is detected.</item>
  <item><label>core::str::Lines::remainder</label> (Function) - score: 0
    Returns the remaining lines of the split string.</item>
  <item><label>std::io::Stdin::lines</label> (Function) - score: 0
    Consumes this handle and returns an iterator over input lines.</item>
  <item><label>alloc::str::Lines::remainder</label> (Function) - score: 0
    Returns the remaining lines of the split string.</item>
  <item><label>std::str::Lines::remainder</label> (Function) - score: 0
    Returns the remaining lines of the split string.</item>
  <item><label>core::column</label> (Macro) - score: 0
    Expands to the column number at which it was invoked.</item>
</list>
